--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ frozenlist==1.4.1
 future==1.0.0
 greenlet==3.0.3
 groq==0.9.0
+gunicorn==22.0.0
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
@@ -27,6 +28,7 @@ Jinja2==3.1.4
 line-bot-sdk==3.11.0
 MarkupSafe==2.1.5
 multidict==6.0.5
+packaging==24.1
 pydantic==2.8.2
 pydantic_core==2.20.1
 python-dateutil==2.9.0.post0
